--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -3,20 +3,17 @@
 
     <item
         android:id="@+id/menu_home"
-        android:title="Home" />
+        android:title="@string/home" />
     <item
         android:id="@+id/menu_assignments"
-        android:title="Assignments" />
-    <item
-        android:id="@+id/menu_calendar"
-        android:title="Calendar" />
+        android:title="@string/assignments" />
     <item
         android:id="@+id/menu_weather"
-        android:title="Weather" />
+        android:title="@string/weather" />
     <item
         android:id="@+id/menu_health"
-        android:title="Health Center" />
+        android:title="@string/health_center" />
     <item
         android:id="@+id/menu_settings"
-        android:title="Settings" />
+        android:title="@string/settings" />
 </menu>
